cmake_minimum_required(VERSION 3.15)
project(cppProject)
find_package(OpenCV)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(${PROJECT_SOURCE_DIR})
set(GOOGLETEST_VERSION 1.9.0)
set(CMAKE_CXX_STANDARD 14)
add_subdirectory(./googletest)
set(LIBRARIES
        gtest
        pthread)
add_executable(cppProject code/main.cpp code/Matrix.hpp code/Vector.hpp )
target_link_libraries(cppProject ${OpenCV_LIBS})
target_link_libraries(cppProject ${LIBRARIES})
message("Building with lcov Code Coverage Tools")
set(CMAKE_CXX_FLAGS "--coverage")